feat: modernize to Java 21 with Maven build system
- Add Maven pom.xml targeting Java 21 LTS with JUnit 5 test support
- Migrate HelloWorld.java to src/main/java/com/example/ (standard Maven layout)
- Apply modern Java 21 features:
  * Records (Greeting, Person) – immutable data carriers (JEP 395)
  * Sealed interface (OutputTarget) with Console/Silent implementations (JEP 409)
  * Pattern-matching switch over sealed types (JEP 441)
  * Text block for the application banner (JEP 378)
  * var local-variable type inference
- Add JUnit 5 unit tests (HelloWorldTest) covering all new types
- Add GitHub Actions CI workflow (.github/workflows/ci.yml) for Java 21 builds
- Update .gitignore with Maven target/ directory and IDE files
- Update README.md with build instructions and project structure

Co-authored-by: ktruchcz <262602283+ktruchcz@users.noreply.github.com>